# SFML-CMAKE-TEMPLATE

./: CMakeLists.txt  README.md
src/: main.cpp
